<resources>
    <string name="app_name">StarrySkySukodu</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_level_selection">LevelSelectionActivity</string>
    <string name="title_activity_game_rules">GameRulesActivity</string>
    <string name="title_activity_game_play">GamePlayActivity</string>
    <string name="game_rules_title">How to Play Sudoku</string>
    <string name="game_rules_text_1">Sudoku is a game played on a square grid.</string>
    <string name="game_rules_text_2">The Sudoku Grid is divided into 9 Rows, 9 Columns and 9 Blocks.</string>
    <string name="game_rules_text_3">Each Row, Column and Block must contain number 1 to 9 without repetition.</string>
    <string name="game_rules_text_4">When all Rows, Columns and Blocks are correctly filled, the Sudoku is completed!</string>
    <string name="guide_text_1">Welcome!\nTo solve a Sudoku puzzle,\nfill the board with numbers.</string>
    <string name="guide_text_2">A number can appear only ONCE\nin each ROW、COLUMN \&amp; BLOCK.</string>
    <string name="guide_text_3">To enter a number,\ntap on an EMPTY cell,</string>
    <string name="guide_text_4">then tap on\nthe appropriate number.</string>
    <string name="guide_text_5">You have a limited amount of time to complete each puzzle!</string>
    <string name="guide_text_6">This covers the basics of\nSta Sudoku.\nGood Luck!</string>
    <string name="guide_press_text">Tap anywhere to continue</string>
    <string name="game_won_txt">YOU WON!</string>
    <string name="game_lost_txt">YOU LOST!</string>
    <string name="game_won_btn_txt">NEXT</string>
    <string name="game_lost_btn_txt">PLAY AGAIN</string>
    <string name="game_start_btn_txt">PLAY</string>
    <string name="level_text_prefix">STAR -&#160;</string>
    <string name="row_text">ROW</string>
    <string name="col_text">C\nO\nL\nU\nM\nN</string>
    <string name="grid_text">BLOCK</string>
    <string name="correct_row_text">Correct Row</string>
    <string name="correct_col_text">Correct Column</string>
    <string name="correct_grid_text">Correct Block</string>
    <string name="sudoku_done_text">Sudoku Complete</string>
    <string name="setting_dialog_title">SETTINGS</string>
    <string name="pause_dialog_title">PAUSED</string>
    <string name="restart_text">RESTART</string>
    <string name="sky_text">STARRY SKY</string>
    <string name="level_top_text_1">More Levels</string>
    <string name="level_top_text_2">Coming Soon…</string>
    <string name="language_receiver">StarrySkySukodu has been switched to English</string>
</resources>