<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/gameRuleLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/game_rules_text_1"
                android:textColor="@color/black"
                android:layout_marginBottom="30dp"/>

            <com.example.sudokuapp.views.FirstRuleLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/game_rules_text_2"
                android:textColor="@color/black"
                android:layout_marginBottom="30dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/game_rules_text_3"
                android:textColor="@color/black"
                android:layout_marginBottom="30dp"/>

            <com.example.sudokuapp.views.SecondRuleLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"/>

            <com.example.sudokuapp.views.ThirdRuleLayout
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginBottom="30dp"/>

            <com.example.sudokuapp.views.FourthRuleLayout
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginBottom="30dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/game_rules_text_4"
                android:textColor="@color/black"
                android:layout_marginBottom="30dp"/>

            <com.example.sudokuapp.views.FifthRuleLayout
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginBottom="30dp"/>


        </LinearLayout>
    </ScrollView>

</FrameLayout>